# coverit-contracts

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  buf.gen.yaml  buf.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: publish.yml
.husky/: pre-commit
auth/: auth.proto
common/: types.proto
protos/common/: types.proto
protos/coverit/auth/v1/: auth.proto
protos/coverit/common/v1/: types.proto
protos/coverit/crawler/v1/: crawler.proto
protos/coverit/integration/v1/: integration.proto
protos/coverit/notification/v1/: notification.proto
protos/coverit/project/v1/: application.proto  dashboard.proto  project.proto
protos/coverit/regression/v1/: regression.proto
protos/crawler/: crawler.proto
protos/project/: application.proto  crawler.proto  project.proto
scripts/: gen-index.mjs
simple/: index.html  packages.json
simple/changelog/: page1.html
simple/coverit-contracts/: index.html
simple/pypi/coverit-contracts/: json
simple/pypi/coverit-contracts/1.7.0/: json
simple/pypi/coverit-contracts/1.7.1/: json
simple/simple/: index.html
simple/simple/coverit-contracts/: index.html
